# eegdash-llm-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: batch_status_report.py  enqueue_all_datasets.py  prepopulate_ground_truth.py  test_docker.sh  test_integration.sh
src/: __init__.py
src/api/: main.py
src/hooks/: __init__.py  base.py
src/hooks/examples/: dummy_hook.py
src/services/: __init__.py  cache.py  mongodb_http_updater.py  mongodb_updater.py  orchestrator.py  queue.py  worker.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cache_service.py  test_mongodb_updater.py  test_orchestrator.py  test_queue_endpoints.py  test_queue_service.py
tests/fixtures/: sample_metadata.json
