[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eegdash-llm-api"
version = "1.0.0"
description = "API service for EEGDash LLM Tagger with caching and orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "EEGDash Team" }
]
keywords = ["eeg", "meg", "neuroimaging", "tagging", "api", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "eegdash-llm-tagger @ git+https://github.com/kuntalkokate/eegdash-llm-tagger.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kuntalkokate/eegdash-llm-api"
Repository = "https://github.com/kuntalkokate/eegdash-llm-api"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
